--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="https://empowermental.co.in" target="_blank" class="text-blue-700 hover:underline font-medium">View Project &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('EmpowerMental', 'A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('EmpowerMental', 'A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -261,7 +261,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="https://codechieve.com" target="_blank" class="text-blue-700 hover:underline font-medium">View Project &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Codechieve', 'An online platform likely related to coding education or achievement tracking. Demonstrates robust back-end logic and a user-friendly interface.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Codechieve', 'An online platform likely related to coding education or achievement tracking. Demonstrates robust back-end logic and a user-friendly interface.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -283,7 +283,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Mycreations', 'A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Mycreations', 'A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
         </div>
@@ -298,7 +298,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Library Management System', 'A robust back-end API system for managing library operations. It includes functionalities for adding, issuing, and returning books, along with user registration and management.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Library Management System', 'A robust back-end API system for managing library operations. It includes functionalities for adding, issuing, and returning books, along with user registration and management.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -309,7 +309,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Task Management System', 'A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Task Management System', 'A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
         </div>
