--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         <div class="container mx-auto px-6 flex justify-between items-center">
             <a href="#home" class="text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
             <div class="hidden md:flex space-x-6"> <!-- Hidden on small screens, flex on medium and up -->
+                <a href="#resume" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Resume</a>
                 <a href="#about" class="nav-link text-gray-600 hover:text-gray-800 font-inter">About</a>
                 <a href="#skills" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Skills</a>
                 <a href="#experience" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Experience</a>
@@ -148,6 +149,19 @@
             </p>
             <a href="#projects" class="btn-primary text-xl font-medium">View My Work</a>
         </div>
+    </section>
+    <section id="resume" class="my-12 text-center">
+      <h2 class="text-3xl font-playfair-display mb-6">Download My Resume</h2>
+      <div class="flex flex-col sm:flex-row justify-center gap-4">
+        <a href="/Aditya-Barve-PHP-Resume.pdf" download
+           class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
+          Download PHP Resume
+        </a>
+        <a href="/Aditya-Barve-Java-Resume.pdf" download
+           class="inline-block bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg transition">
+          Download Java Resume
+        </a>
+      </div>
     </section>
 
     <!-- About Section -->
