--- a/index.html
+++ b/index.html
@@ -252,18 +252,18 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="https://empowermental.co.in" target="_blank" class="text-blue-700 hover:underline font-medium">View Project &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('EmpowerMental', 'A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('EmpowerMental', 'A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
                 <img src="https://placehold.co/600x350/E0E0E0/4A90E2?text=Codechieve" alt="Codechieve Project" class="rounded-lg mb-4 w-full">
                 <h4 class="text-2xl font-semibold text-gray-800 mb-2">Codechieve</h4>
                 <p class="text-gray-700 mb-4 project-description">
-                    An online platform likely related to coding education or achievement tracking. Demonstrates robust back-end logic and a user-friendly interface.
+  A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions. Codechieve helps startups and small businesses build their online presence with clean design, scalable code, and performance-first development.
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="https://codechieve.com" target="_blank" class="text-blue-700 hover:underline font-medium">View Project &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Codechieve', 'An online platform likely related to coding education or achievement tracking. Demonstrates robust back-end logic and a user-friendly interface.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Codechieve', 'An online platform likely related to coding education or achievement tracking. Demonstrates robust back-end logic and a user-friendly interface.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -274,7 +274,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Culinary Destination', 'A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Culinary Destination', 'A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -285,7 +285,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Mycreations', 'A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Mycreations', 'A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
         </div>
@@ -300,7 +300,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Library Management System', 'A robust back-end API system for managing library operations. It includes functionalities for adding, issuing, and returning books, along with user registration and management.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Library Management System', 'A robust back-end API system for managing library operations. It includes functionalities for adding, issuing, and returning books, along with user registration and management.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
             <div class="card p-6">
@@ -311,7 +311,7 @@
                 </p>
                 <div class="flex flex-wrap gap-2 mt-4">
                     <a href="#" class="text-blue-700 hover:underline font-medium">Project Details (Coming Soon) &rarr;</a>
-                    <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Task Management System', 'A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.')">✨ Get Project Insight</button>
+<!--                     <button class="btn-primary text-sm px-3 py-1" onclick="getProjectInsight('Task Management System', 'A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.')">✨ Get Project Insight</button> -->
                 </div>
             </div>
         </div>
@@ -343,7 +343,7 @@
     <footer class="bg-gray-800 text-white py-8 text-center">
         <div class="container mx-auto px-6">
             <p>&copy; 2025 Aditya Barve. All rights reserved.</p>
-            <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p>
+<!--             <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p> -->
         </div>
     </footer>
 
@@ -375,7 +375,7 @@
                 </a>
             </div>
             <p class="text-sm text-gray-500 mt-4">
-                (Note: Resume files are placeholders. Please replace `/Aditya-Barve-PHP-Resume.pdf` and `/Aditya-Barve-Java-Resume.pdf` with your actual resume file paths.)
+<!--                 (Note: Resume files are placeholders. Please replace `/Aditya-Barve-PHP-Resume.pdf` and `/Aditya-Barve-Java-Resume.pdf` with your actual resume file paths.) -->
             </p>
         </div>
     </div>
