--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Barve - Web Developer Portfolio</title>
+    <!-- Meta Description -->
+    <meta name="description" content="Aditya Barve's personal web developer portfolio showcasing expertise in PHP, Laravel, Java, Spring Boot, HTML, CSS, and Bootstrap. Explore projects, skills, and experience.">
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="Aditya Barve, web developer, PHP, Laravel, Java, Spring Boot, HTML, CSS, Bootstrap, API, full-stack, portfolio, software developer">
+    <!-- Meta Author -->
+    <meta name="author" content="Aditya Barve">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourportfolio.com/"> <!-- Replace with your actual portfolio URL -->
+    <meta property="og:title" content="Aditya Barve - Web Developer Portfolio">
+    <meta property="og:description" content="Aditya Barve's personal web developer portfolio showcasing expertise in PHP, Laravel, Java, Spring Boot, HTML, CSS, and Bootstrap.">
+    <meta property="og:image" content="https://placehold.co/1200x630/E0E0E0/4A90E2?text=Aditya+Barve+Portfolio"> <!-- Replace with a high-quality image URL for social sharing -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yourportfolio.com/"> <!-- Replace with your actual portfolio URL -->
+    <meta property="twitter:title" content="Aditya Barve - Web Developer Portfolio">
+    <meta property="twitter:description" content="Aditya Barve's personal web developer portfolio showcasing expertise in PHP, Laravel, Java, Spring Boot, HTML, CSS, and Bootstrap.">
+    <meta property="twitter:image" content="https://placehold.co/1200x630/E0E0E0/4A90E2?text=Aditya+Barve+Portfolio"> <!-- Replace with a high-quality image URL for social sharing -->
+    
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter (for body) and Playfair Display (for headings) -->
