--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <button class="modal-close-btn" onclick="closeModal('resumeModal')">&times;</button>
             <h2 class="text-3xl font-playfair-display mb-6">Download My Resume</h2>
             <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="/Aditya-Barve-PHP-Resume.pdf" download
+                <a href="/Aditya-Barve-PHP-Resume.html" download
                    class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg transition">
                     Download PHP Resume
                 </a>
