--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -90,6 +90,12 @@
 </head>
 <body>
     <div class="resume-container">
+        <div class="text-right mb-4">
+          <button onclick="window.print()" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">
+            Download as PDF
+          </button>
+        </div>
+
         <h1 class="text-center">ADITYA BARVE</h1>
         <div class="contact-info text-center text-gray-600 mb-8">
             <a href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank" class="mr-2">LinkedIn</a> |
