--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -126,7 +126,18 @@
             <li><strong>Build Tools:</strong> Maven</li>
             <li><strong>IDE:</strong> VSCode, Spring Tool Suite, Eclipse</li>
         </ul>
-
+        <h2>Experience</h2>
+        <h3 class="mt-4">PHP Developer | Onkar E Learnings & Solutions LLP</h3>
+        <p class="text-gray-600 italic">March 01, 2025 — Present</p>
+        <ul class="list-disc ml-6">
+            <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
+            <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
+            <li>Built and integrated APIs for various functionalities.</li>
+            <li>Implemented payment gateway integrations for e-commerce solutions.</li>
+            <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
+            <li>Engaged directly with clients to understand requirements and provide solutions.</li>
+            <li>Demonstrated leadership in project execution and problem-solving.</li>
+        </ul>
         <h2>Projects</h2>
         <h3 class="mt-4">Task Management System</h3>
         <p class="project-description">A full-stack application with APIs for adding and deleting tasks, complemented by a front-end built with HTML, CSS, and Bootstrap. Future plans include user registration.</p>
