--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -90,11 +90,11 @@
 </head>
 <body>
     <div class="resume-container">
-        <div class="text-right mb-4">
+<!--         <div class="text-right mb-4">
           <button onclick="window.print()" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">
             Download as PDF
           </button>
-        </div>
+        </div> -->
 
         <h1 class="text-center">ADITYA BARVE</h1>
         <div class="contact-info text-center text-gray-600 mb-8">
