--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -6,6 +6,12 @@
     <title>Aditya Barve - Java/Spring Boot Resume</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      window.onload = function () {
+        window.print();
+      };
+    </script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
