--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -156,5 +156,11 @@
         <p class="project-description">A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
         <p class="technologies">Technologies: HTML, CSS, Bootstrap, PHP</p>
     </div>
+    <script>
+      window.onload = function () {
+        window.print();
+      };
+    </script>
+
 </body>
 </html>
