--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -158,7 +158,7 @@
     </div>
     <script>
       window.onload = function () {
-        const choice = confirm("Do you want to print your resume?\nClick 'Cancel' to download instead.");
+        const choice = confirm("Do you want to print resume?\nClick 'Cancel' to download instead.");
         
         if (choice) {
           window.print(); // If user chooses Print
