--- a/Aditya-Barve-JAVA-Resume.html
+++ b/Aditya-Barve-JAVA-Resume.html
@@ -6,21 +6,22 @@
     <title>Aditya Barve - Java/Spring Boot Resume</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script>
-      window.onload = function () {
-        const choice = confirm("Do you want to print your resume?\nClick 'Cancel' to download instead.");
-        
-        if (choice) {
-          window.print(); // If user chooses Print
-        } else {
-          // Trigger Download
-          const link = document.createElement('a');
-          link.href = 'Aditya-Barve-JAVA-Resume.html';
-          link.download = 'Aditya-Barve-JAVA-Resume.html';
-          link.click();
-        }
-      };
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
+  <script>
+  window.onload = function () {
+    const choice = confirm("Do you want to print your resume?\nClick 'Cancel' to download it as PDF.");
+
+    if (choice) {
+      window.print(); // Print resume
+    } else {
+      // Download as PDF
+      const element = document.body; // You can change this to a specific resume container
+      html2pdf().from(element).save('Aditya-Barve-JAVA-Resume.pdf');
+    }
+  };
+</script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
