--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -1,175 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Barve - Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aditya Barve - Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-        }
-        .resume-container {
-            background-color: #ffffff;
-            max-width: 800px;
-            width: 100%;
-            padding: 40px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 12px;
-        }
-        h1 {
-            font-size: 2.25rem; /* 36px */
-            font-weight: 700;
-            color: #1f2937;
-            margin-bottom: 10px;
-        }
-        h2 {
-            font-size: 1.5rem; /* 24px */
-            font-weight: 600;
-            color: #1f2937;
-            margin-top: 25px;
-            margin-bottom: 15px;
-            border-bottom: 2px solid #e5e7eb;
-            padding-bottom: 5px;
-        }
-        h3 {
-            font-size: 1.125rem; /* 18px */
-            font-weight: 600;
-            color: #374151;
-            margin-top: 15px;
-        }
-        p, ul {
-            font-size: 1rem; /* 16px */
-            line-height: 1.6;
-            color: #4b5563;
-        }
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 8px;
-        }
-        .contact-info a {
-            color: #2563eb;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
-        .project-description {
-            font-style: italic;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            color: #6b7280;
-        }
-        .technologies {
-            font-size: 0.9rem;
-            color: #6b7280;
-            margin-top: 5px;
-        }
-        @media print {
-            body {
-                background-color: #ffffff;
-                padding: 0;
-            }
-            .resume-container {
-                box-shadow: none;
-                border-radius: 0;
-                padding: 20px;
-                max-width: none;
-            }
-        }
-    </style>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f3f4f6;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    .resume-container {
+      width: 100%;
+      max-width: 1000px;
+      background-color: white;
+      padding: 30px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      height: auto;
+    }
+
+    .left-column, .right-column {
+      width: 50%;
+      box-sizing: border-box;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #1f2937;
+      text-align: center;
+      width: 100%;
+    }
+
+    h2 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin: 20px 0 10px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 4px;
+      color: #1f2937;
+    }
+
+    h3 {
+      font-size: 1.05rem;
+      font-weight: 600;
+      margin-top: 12px;
+      color: #374151;
+    }
+
+    p, li {
+      font-size: 0.95rem;
+      line-height: 1.5;
+      color: #4b5563;
+    }
+
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+
+    .contact-info {
+      text-align: center;
+      color: #6b7280;
+      font-size: 0.95rem;
+      margin-bottom: 20px;
+      width: 100%;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 24px;
+      border-radius: 8px;
+      text-align: center;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+
+    @media print {
+      body {
+        background-color: white;
+        margin: 0;
+        padding: 0;
+      }
+
+      .modal-overlay {
+        display: none !important;
+      }
+
+      .resume-container {
+        box-shadow: none;
+        padding: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="resume-container">
-<!--         <div class="text-right mb-4">
-          <button onclick="window.print()" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">
-            Download as PDF
-          </button>
-        </div> -->
-
-        <h1 class="text-center">ADITYA BARVE</h1>
-        <div class="contact-info text-center text-gray-600 mb-8">
-            <p>https://www.linkedin.com/in/aditya-barve-fswd/</p> |
-            +91-9137818209 |
-            adityabarve28@gmail.com |
-            <p>https://adityabarve28.github.io/portfolio/</p>
-        </div>
-
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <strong>Shivajirao S Jondhale College of Engineering</strong>, Bachelor of Engineering in Information Technology, Dombivli | Sept 2021 - August 2024
-            </li>
-            <li>
-                <strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma in Information Technology, Asangaon | August 2017 - June 2021
-            </li>
-            <li>
-                <strong>Shakuntala Vidyalaya School</strong>, SSC | June 2016 - June 2017
-            </li>
-        </ul>
-
-        <h2>Technical Skills</h2>
-        <ul class="list-none ml-0">
-            <li><strong>Web Technologies:</strong> HTML, CSS, Bootstrap, JavaScript</li>
-            <li><strong>Backend Technologies:</strong> PHP</li>
-            <li><strong>Frameworks:</strong> Laravel</li>
-            <li><strong>Database:</strong> MySQL</li>
-            <li><strong>IDE:</strong> VSCode</li>
-        </ul>
-
-        <h2>Experience</h2>
-        <h3 class="mt-4">PHP Developer | Onkar E Learnings & Solutions LLP</h3>
-        <p class="text-gray-600 italic">March 01, 2025 — Present</p>
-        <ul class="list-disc ml-6">
-            <li>Responsible for developing and maintaining web applications using PHP and Laravel.</li>
-            <li>Developed responsive front-end interfaces using HTML, CSS, and Bootstrap.</li>
-            <li>Built and integrated APIs for various functionalities.</li>
-            <li>Implemented payment gateway integrations for e-commerce solutions.</li>
-            <li>Managed server environments (CPanel, AApanel, VPS, Shared Hosting) and DNS configurations.</li>
-            <li>Engaged directly with clients to understand requirements and provide solutions.</li>
-            <li>Demonstrated leadership in project execution and problem-solving.</li>
-        </ul>
-
-        <h2>Projects</h2>
-        <h3 class="mt-4">EmpowerMental</h3>
-        <p class="project-description">A web application designed to support mental well-being. This project showcases full-stack development capabilities, focusing on user interaction and data management.</p>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
-
-        <h3 class="mt-4">Codechieve</h3>
-        <p class="project-description">A modern freelance web development platform offering custom websites, landing pages, and business-ready digital solutions. Codechieve helps startups and small businesses build their online presence with clean design, scalable code, and performance-first development.</p>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, PHP (Laravel), MySQL</p>
-
-        <h3 class="mt-4">Culinary Destination</h3>
-        <p class="project-description">A full-scale online ordering system for restaurants. Features include menu management, order processing, and potentially payment integration, providing a complete e-commerce solution for the food industry.</p>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, PHP, MySQL</p>
-
-        <h3 class="mt-4">Mycreations</h3>
-        <p class="project-description">A personal blog website, showcasing content management, user interaction, and a clean presentation of articles or creative works.</p>
-        <p class="technologies">Technologies: HTML, CSS, Bootstrap, PHP</p>
+  <!-- Modal -->
+  <div id="actionModal" class="modal-overlay">
+    <div class="modal-content">
+      <h2 class="text-lg font-semibold text-gray-800 mb-4">Choose Action</h2>
+      <p class="text-gray-600 mb-6">Would you like to Print or Download the resume?</p>
+      <div class="flex justify-center space-x-4">
+        <button onclick="handleAction('print')" class="bg-gray-800 text-white px-4 py-2 rounded hover:bg-gray-900">Print</button>
+        <button onclick="handleAction('download')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Download</button>
+      </div>
     </div>
-<script>
-  window.onload = function () {
-    const choice = confirm("Do you want to print your resume?\nClick 'Cancel' to download it as PDF.");
+  </div>
 
-    if (choice) {
-      window.print(); // Print resume
-    } else {
-      // Download as PDF
-      const element = document.body; // You can change this to a specific resume container
-      html2pdf().from(element).save('Aditya-Barve-PHP-Resume.pdf');
+  <!-- Resume Content -->
+  <div class="resume-container" id="resume">
+    <h1>ADITYA BARVE</h1>
+    <div class="contact-info">
+      <p>https://www.linkedin.com/in/aditya-barve-fswd/</p>
+      <p>+91-9137818209</p>
+      <p>adityabarve28@gmail.com</p>
+      <p>https://adityabarve28.github.io/portfolio/</p>
+    </div>
+
+    <div class="left-column">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>Shivajirao S Jondhale College of Engineering</strong>, BE IT, Dombivli (2021-2024)</li>
+        <li><strong>Shivajirao S Jondhale Polytechnic</strong>, Diploma IT, Asangaon (2017-2021)</li>
+        <li><strong>Shakuntala Vidyalaya</strong>, SSC (2016-2017)</li>
+      </ul>
+
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Web:</strong> HTML, CSS, Bootstrap, JavaScript</li>
+        <li><strong>Backend:</strong> PHP</li>
+        <li><strong>Framework:</strong> Laravel</li>
+        <li><strong>Database:</strong> MySQL</li>
+        <li><strong>IDE:</strong> VSCode</li>
+      </ul>
+
+      <h2>Projects</h2>
+      <h3>EmpowerMental</h3>
+      <p>Mental wellness app – Laravel + MySQL full stack</p>
+
+      <h3>Codechieve</h3>
+      <p>Freelance dev platform for business sites and landing pages</p>
+
+      <h3>Culinary Destination</h3>
+      <p>Online food ordering with menu/order/payment management</p>
+
+      <h3>Mycreations</h3>
+      <p>Personal blog CMS with user interaction</p>
+    </div>
+
+    <div class="right-column">
+      <h2>Experience</h2>
+      <h3>PHP Developer | Onkar E Learnings & Solutions LLP</h3>
+      <p><em>March 01, 2025 — Present</em></p>
+      <ul>
+        <li>Built and maintained Laravel-based web apps</li>
+        <li>Front-end development with Bootstrap</li>
+        <li>Integrated APIs and payment gateways</li>
+        <li>Managed hosting environments (CPanel, VPS, Shared)</li>
+        <li>Client communication and requirement gathering</li>
+        <li>Led project execution and issue resolution</li>
+      </ul>
+    </div>
+  </div>
+
+  <script>
+    function handleAction(action) {
+      const modal = document.getElementById('actionModal');
+      modal.style.display = 'none';
+      setTimeout(() => {
+        if (confirm(`Are you sure you want to ${action}?`)) {
+          if (action === 'print') {
+            window.print();
+          } else if (action === 'download') {
+            const element = document.getElementById('resume');
+            const options = {
+              margin: 0.2,
+              filename: 'Aditya-Barve-PHP-Resume.pdf',
+              image: { type: 'jpeg', quality: 0.98 },
+              html2canvas: { scale: 2 },
+              jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+            };
+            html2pdf().set(options).from(element).save();
+          }
+        } else {
+          modal.style.display = 'flex'; // reopen modal if canceled
+        }
+      }, 300);
     }
-  };
-</script>
+
+    window.onload = () => {
+      document.getElementById('actionModal').style.display = 'flex';
+    };
+  </script>
 </body>
 </html>
