--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -70,8 +70,36 @@
       list-style-type: disc;
       margin-left: 20px;
     }
+.contact-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+  text-align: justify;
+}
 
-    .contact-grid {
+.contact-item {
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.left {
+  justify-self: start;
+  text-align: left;
+}
+
+.right {
+  justify-self: end;
+  text-align: right;
+}
+
+.contact-item a {
+  color: #007bff;
+  text-decoration: none;
+  word-break: break-all;
+}
+
+/*     .contact-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -85,7 +113,7 @@
       margin-bottom: 8px;
       font-size: 0.95rem;
       color: #4b5563;
-    }
+    } */
 
     .modal-overlay {
       position: fixed;
@@ -143,13 +171,14 @@
   <div class="resume-container" id="resume">
     <h1>ADITYA BARVE</h1>
 
-    <!-- Contact Info Grid -->
-    <div class="contact-grid">
-      <div class="contact-item"><strong>LinkedIn:</strong> <br> https://www.linkedin.com/in/aditya-barve-fswd/</div>
-      <div class="contact-item"><strong>Phone:</strong> <br> +91-9137818209</div>
-      <div class="contact-item"><strong>Email:</strong> <br> adityabarve28@gmail.com</div>
-      <div class="contact-item"><strong>Portfolio:</strong> <br> https://adityabarve28.github.io/portfolio/</div>
-    </div>
+  <!-- Contact Info Grid -->
+  <div class="contact-grid">
+    <div class="contact-item left"><strong>LinkedIn:</strong> <br> <a href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank">linkedin.com/in/aditya-barve-fswd</a></div>
+    <div class="contact-item right"><strong>Phone:</strong> <br> +91-9137818209</div>
+    <div class="contact-item left"><strong>Email:</strong> <br> <a href="mailto:adityabarve28@gmail.com">adityabarve28@gmail.com</a></div>
+    <div class="contact-item right"><strong>Portfolio:</strong> <br> <a href="https://adityabarve28.github.io/portfolio/" target="_blank">adityabarve28.github.io</a></div>
+  </div>
+
 
     <!-- Left Column -->
     <div class="left-column">
