--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -70,7 +70,7 @@
       list-style-type: disc;
       margin-left: 20px;
     }
-.contact-grid {
+/* .contact-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
@@ -97,7 +97,7 @@
   color: #007bff;
   text-decoration: none;
   word-break: break-all;
-}
+} */
 
 /*     .contact-grid {
       display: flex;
@@ -173,10 +173,14 @@
 
   <!-- Contact Info Grid -->
   <div class="contact-grid">
-    <div class="contact-item left"><strong>LinkedIn:</strong> <br> <a href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank">linkedin.com/in/aditya-barve-fswd</a></div>
-    <div class="contact-item right"><strong>Phone:</strong> <br> +91-9137818209</div>
-    <div class="contact-item left"><strong>Email:</strong> <br> <a href="mailto:adityabarve28@gmail.com">adityabarve28@gmail.com</a></div>
-    <div class="contact-item right"><strong>Portfolio:</strong> <br> <a href="https://adityabarve28.github.io/portfolio/" target="_blank">adityabarve28.github.io</a></div>
+    <div class="left-column">
+      <div class="contact-item left"><strong>LinkedIn:</strong> <br> <a href="https://www.linkedin.com/in/aditya-barve-fswd/" target="_blank">linkedin.com/in/aditya-barve-fswd</a></div>
+      <div class="contact-item right"><strong>Phone:</strong> <br> +91-9137818209</div>
+    </div>
+    <div class="right-column">
+      <div class="contact-item left"><strong>Email:</strong> <br> <a href="mailto:adityabarve28@gmail.com">adityabarve28@gmail.com</a></div>
+      <div class="contact-item right"><strong>Portfolio:</strong> <br> <a href="https://adityabarve28.github.io/portfolio/" target="_blank">adityabarve28.github.io</a></div>
+    </div>
   </div>
 
 
