--- a/Aditya-Barve-PHP-Resume.html
+++ b/Aditya-Barve-PHP-Resume.html
@@ -99,7 +99,7 @@
   word-break: break-all;
 } */
 
-/*     .contact-grid {
+     .contact-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -113,7 +113,7 @@
       margin-bottom: 8px;
       font-size: 0.95rem;
       color: #4b5563;
-    } */
+    } 
 
     .modal-overlay {
       position: fixed;
